--- a/index.html
+++ b/index.html
@@ -8,6 +8,39 @@
     <title>Flex User Card</title>
 </head>
 <body>
-    
+    <section class="container">
+        <article class="card-container">
+            <img src="./assets/GettyImages-875362426-e1517526513104.jpeg" class="user-img">
+            <h2 class="user-position">Film Director, Producer</h2>
+            <p class="user-wage">&#8364;14/hour</p>
+            <h3 class="user-adress">Jeffrey Abrams, 51</h3>
+            <h3 class="user-location"> 
+            <svg xmlns="http://www.w3.org/2000/svg"  width: 5;
+            height: 5;
+            viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
+            New York, United States</h3>
+            <p class="user-info">Abrams was born in New York City and raised in Los Angeles.</p>
+            <button class="button button-cv">VIEW CV</button>
+            <button class="button button-offer">MAKE OFFER</button>
+            <p class="user-status">
+                <svg width="64px" height="64px" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" fill="#2bda48" stroke="#2bda48"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><title>circle</title><circle cx="512" cy="512" r="256" fill="#59ee2f" fill-rule="evenodd"></circle></g></svg>
+                Online</p>
+        </article>
+        <article class="card-container">
+            <img src="./assets/no-image-webstore.png" class="user-img">
+            <h2 class="user-position">Actor, Film Director</h2>
+            <p class="user-wage"> &#8364;9/hour</p>
+            <h3 class="user-adress">Baltasar Kormákur, 52</h3>
+            <h3 class="user-location">
+            <svg xmlns="http://www.w3.org/2000/svg"  width: 5;
+            height: 5;
+            viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
+            Reykjavik, Iceland</h3>
+            <p class="user-info">Icelandic actor, theater and film director, and film producer.</p>
+            <button class="button button-cv">VIEW CV</button>
+            <button class="button button-offer">MAKE OFFER</button>
+            <p class="user-status">Last seen: 17 minutes ago</p>
+        </article>
+    </section>
 </body>
 </html>
