--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <article class="card-container">
             <div class="shadow">
                 <img src="./assets/GettyImages-875362426-e1517526513104.jpeg" class="user-img">
-                <img class="star" scr="./assets/star-svgrepo-com.svg" >
+                <div>
+                     <img src="./assets/star-svgrepo-com.svg" class="star">
+                </div>
                 <h2 class="user-position">Film Director, Producer</h2>
                 <p class="user-wage">&#8364;14/hour</p>
             </div>
@@ -34,6 +36,9 @@
         <article class="card-container">
             <div class="shadow">
                 <img src="./assets/no-image-webstore.png" class="user-img">
+                <div>
+                    <img src="./assets/star-svgrepo-com (1).svg" class="star">
+               </div>
                 <h2 class="user-position">Actor, Film Director</h2>
                 <p class="user-wage"> &#8364;9/hour</p>
             </div>
